deploy: 600b9a0054ca1a42a73df36695f7b9ef33270dee

--- a/genindex.html
+++ b/genindex.html
@@ -287,6 +287,9 @@ document.write(`
 
 <div class="genindex-jumpbox">
  <a href="#B"><strong>B</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#P"><strong>P</strong></a>
  
 </div>
 <h2 id="B">B</h2>
@@ -494,12 +497,12 @@ document.write(`
 </li>
       <li><a href="cpp_api/node.html#_CPPv4NK5Brush4NodegtERK4Node">Brush::Node::operator&gt; (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cpp_api/node.html#_CPPv4NK5Brush4NodegeERK4Node">Brush::Node::operator&gt;= (C++ function)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node11prob_changeE">Brush::Node::prob_change (C++ member)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node8ret_typeE">Brush::Node::ret_type (C++ member)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node17set_complete_hashEv">Brush::Node::set_complete_hash (C++ function)</a>
@@ -699,6 +702,40 @@ document.write(`
       <li><a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace16terminal_weightsE">Brush::SearchSpace::terminal_weights (C++ member)</a>
 </li>
       <li><a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace10weight_mapE">Brush::SearchSpace::weight_map (C++ member)</a>
+</li>
+      <li><a href="python_api/classifier.html#brush.estimator.BrushClassifier">BrushClassifier (class in brush.estimator)</a>
+</li>
+      <li><a href="python_api/estimator.html#brush.estimator.BrushEstimator">BrushEstimator (class in brush.estimator)</a>
+</li>
+      <li><a href="python_api/regressor.html#brush.estimator.BrushRegressor">BrushRegressor (class in brush.estimator)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/estimator.html#brush.estimator.BrushEstimator.fit">fit() (brush.estimator.BrushEstimator method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/estimator.html#brush.estimator.BrushEstimator.get_params">get_params() (brush.estimator.BrushEstimator method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/estimator.html#brush.estimator.BrushEstimator.predict">predict() (brush.estimator.BrushEstimator method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python_api/classifier.html#brush.estimator.BrushClassifier.predict_proba">predict_proba() (brush.estimator.BrushClassifier method)</a>
 </li>
   </ul></td>
 </tr></table>
