--- a/search.html
+++ b/search.html
@@ -50,6 +50,7 @@
   <script src="_static/searchtools.js"></script>
   <script src="_static/language_data.js"></script>
   <script src="searchindex.js"></script>
+    <link rel="shortcut icon" href="_static/paint-brush-solid.svg"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="#" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
