deploy: 325c40ed417d1070949f9ab606423c62fe92c9e8

--- a/genindex.html
+++ b/genindex.html
@@ -694,6 +694,8 @@ document.write(`
 </li>
       <li><a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace8node_mapE">Brush::SearchSpace::node_map (C++ member)</a>
 </li>
+      <li><a href="cpp_api/search_space.html#_CPPv4NK5Brush11SearchSpace5printEv">Brush::SearchSpace::print (C++ function)</a>
+</li>
       <li><a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace11SearchSpaceERK7DatasetRK13unordered_mapI6stringfE">Brush::SearchSpace::SearchSpace (C++ function)</a>, <a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace11SearchSpaceEv">[1]</a>
 </li>
       <li><a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace12terminal_mapE">Brush::SearchSpace::terminal_map (C++ member)</a>
