--- a/genindex.html
+++ b/genindex.html
@@ -455,17 +455,19 @@ document.write(`
 </li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node9center_opE">Brush::Node::center_op (C++ member)</a>
 </li>
-      <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node13complete_hashE">Brush::Node::complete_hash (C++ member)</a>
-</li>
-      <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node7featureE">Brush::Node::feature (C++ member)</a>
-</li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node5fixedE">Brush::Node::fixed (C++ member)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node13get_arg_countEv">Brush::Node::get_arg_count (C++ function)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node13get_arg_typesEv">Brush::Node::get_arg_types (C++ function)</a>
 </li>
-      <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node8get_nameEv">Brush::Node::get_name (C++ function)</a>
+      <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node11get_featureEv">Brush::Node::get_feature (C++ function)</a>
+</li>
+      <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node9get_modelERK6vectorI6stringE">Brush::Node::get_model (C++ function)</a>
+</li>
+      <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node8get_nameEb">Brush::Node::get_name (C++ function)</a>
+</li>
+      <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node13get_node_hashEv">Brush::Node::get_node_hash (C++ function)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node15get_prob_changeEv">Brush::Node::get_prob_change (C++ function)</a>
 </li>
@@ -473,13 +475,15 @@ document.write(`
 </li>
       <li><a href="cpp_api/node.html#_CPPv4NK5Brush4Node12get_ret_typeEv">Brush::Node::get_ret_type (C++ function)</a>
 </li>
+      <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node9HashTupleE">Brush::Node::HashTuple (C++ type)</a>
+</li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node4initEv">Brush::Node::init (C++ function)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node11is_weightedE">Brush::Node::is_weighted (C++ member)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node4nameE">Brush::Node::name (C++ member)</a>
 </li>
-      <li><a href="cpp_api/node.html#_CPPv4I0EN5Brush4Node4NodeE8NodeType1Sb">Brush::Node::Node (C++ function)</a>, <a href="cpp_api/node.html#_CPPv4I0EN5Brush4Node4NodeE8NodeType6string1S">[1]</a>, <a href="cpp_api/node.html#_CPPv4N5Brush4Node4NodeEv">[2]</a>
+      <li><a href="cpp_api/node.html#_CPPv4I0EN5Brush4Node4NodeE8NodeType1Sb6string">Brush::Node::Node (C++ function)</a>, <a href="cpp_api/node.html#_CPPv4N5Brush4Node4NodeEv">[1]</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node9node_typeE">Brush::Node::node_type (C++ member)</a>
 </li>
@@ -495,14 +499,14 @@ document.write(`
 </li>
       <li><a href="cpp_api/node.html#_CPPv4NK5Brush4NodegeERK4Node">Brush::Node::operator&gt;= (C++ function)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node11prob_changeE">Brush::Node::prob_change (C++ member)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node8ret_typeE">Brush::Node::ret_type (C++ member)</a>
 </li>
-      <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node17set_complete_hashEv">Brush::Node::set_complete_hash (C++ function)</a>
+      <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node11set_featureE6string">Brush::Node::set_feature (C++ function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cpp_api/node.html#_CPPv4N5Brush4Node15set_prob_changeEf">Brush::Node::set_prob_change (C++ function)</a>
 </li>
       <li><a href="cpp_api/node.html#_CPPv4I0EN5Brush4Node13set_signatureEvv">Brush::Node::set_signature (C++ function)</a>
@@ -607,13 +611,11 @@ document.write(`
 </li>
       <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program5crossE7ProgramI1TE">Brush::Program::cross (C++ function)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program15delete_mutationE4IterRK11SearchSpace">Brush::Program::delete_mutation (C++ function)</a>
-</li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program3fitERK3RefIK8ArrayXXfERK3RefIK7ArrayXfE">Brush::Program::fit (C++ function)</a>, <a href="cpp_api/program.html#_CPPv4N5Brush7Program3fitERK7Dataset">[1]</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program7fitnessE">Brush::Program::fitness (C++ member)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program13get_dot_modelEv">Brush::Program::get_dot_model (C++ function)</a>
+      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program13get_dot_modelE6string">Brush::Program::get_dot_model (C++ function)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program9get_modelE6stringb">Brush::Program::get_model (C++ function)</a>
 </li>
@@ -623,15 +625,11 @@ document.write(`
 </li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program12grad_descentERK7ArrayXfRK7Dataset">Brush::Program::grad_descent (C++ function)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program15insert_mutationE4IterRK11SearchSpace">Brush::Program::insert_mutation (C++ function)</a>
-</li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program10is_fitted_E">Brush::Program::is_fitted_ (C++ member)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program9linearizeEv">Brush::Program::linearize (C++ function)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program6mutateERK11SearchSpace">Brush::Program::mutate (C++ function)</a>
-</li>
-      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program14point_mutationE4IterRK11SearchSpace">Brush::Program::point_mutation (C++ function)</a>
+      <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program6mutateEv">Brush::Program::mutate (C++ function)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program7predictE11enable_if_tI9is_same_vI1R7ArrayXbE1RERK7Dataset">Brush::Program::predict (C++ function)</a>, <a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program7predictE11enable_if_tI9is_same_vI1R7ArrayXiE1RERK7Dataset">[1]</a>, <a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program7predictE11enable_if_tI9is_same_vI1R8TreeTypeE1RERK7Dataset">[2]</a>, <a href="cpp_api/program.html#_CPPv4N5Brush7Program7predictERK3RefIK8ArrayXXfE">[3]</a>
 </li>
