--- a/genindex.html
+++ b/genindex.html
@@ -301,7 +301,7 @@ document.write(`
 </li>
       <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset14classificationE">Brush::Data::Dataset::classification (C++ member)</a>
 </li>
-      <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset7DatasetERK3RefIK8ArrayXXfERK3RefIK7ArrayXfERK6vectorI6stringERK3mapI6string5StateEb">Brush::Data::Dataset::Dataset (C++ function)</a>, <a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset7DatasetERK3RefIK8ArrayXXfERK6vectorI6stringE">[1]</a>, <a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset7DatasetERNSt3mapI6string5StateEERK3RefIK7ArrayXfEb">[2]</a>
+      <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset7DatasetERK8ArrayXXfRK3RefIK7ArrayXfERK6vectorI6stringERK3mapI6string5StateEb">Brush::Data::Dataset::Dataset (C++ function)</a>, <a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset7DatasetERK8ArrayXXfRK6vectorI6stringE">[1]</a>, <a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset7DatasetERNSt3mapI6string5StateEERK3RefIK7ArrayXfEb">[2]</a>
 </li>
       <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset13feature_typesE">Brush::Data::Dataset::feature_types (C++ member)</a>
 </li>
@@ -315,9 +315,11 @@ document.write(`
 </li>
       <li><a href="cpp_api/data.html#_CPPv4NK5Brush4Data7Dataset13get_n_samplesEv">Brush::Data::Dataset::get_n_samples (C++ function)</a>
 </li>
+      <li><a href="cpp_api/data.html#_CPPv4NK5Brush4Data7Dataset5get_XEv">Brush::Data::Dataset::get_X (C++ function)</a>
+</li>
       <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset4initEv">Brush::Data::Dataset::init (C++ function)</a>
 </li>
-      <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset13make_featuresERK3RefIK8ArrayXXfERK3mapI6string5StateERK6vectorI6stringE">Brush::Data::Dataset::make_features (C++ function)</a>
+      <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset13make_featuresERK8ArrayXXfRK3mapI6string5StateERK6vectorI6stringE">Brush::Data::Dataset::make_features (C++ function)</a>
 </li>
       <li><a href="cpp_api/data.html#_CPPv4NK5Brush4Data7DatasetclERK6vectorI6size_tE">Brush::Data::Dataset::operator() (C++ function)</a>
 </li>
@@ -330,6 +332,8 @@ document.write(`
       <li><a href="cpp_api/data.html#_CPPv4NK5Brush4Data7Dataset5splitERK7ArrayXb">Brush::Data::Dataset::split (C++ function)</a>
 </li>
       <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset17unique_data_typesE">Brush::Data::Dataset::unique_data_types (C++ member)</a>
+</li>
+      <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset4XrefE">Brush::Data::Dataset::Xref (C++ member)</a>
 </li>
       <li><a href="cpp_api/data.html#_CPPv4N5Brush4Data7Dataset1yE">Brush::Data::Dataset::y (C++ member)</a>
 </li>
@@ -607,9 +611,11 @@ document.write(`
 </li>
       <li><a href="cpp_api/nodetypes.html#_CPPv4N5Brush8NodeType8TerminalE">Brush::NodeType::Terminal (C++ enumerator)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4I0EN5Brush7ProgramE">Brush::Program (C++ struct)</a>
+      <li><a href="cpp_api/program.html#_CPPv4I_2PTEN5Brush7ProgramE">Brush::Program (C++ struct)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program5crossE7ProgramI1TE">Brush::Program::cross (C++ function)</a>
+      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program6argmaxE">Brush::Program::argmax (C++ member)</a>
+</li>
+      <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program5crossE7ProgramI5PTypeE">Brush::Program::cross (C++ function)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program3fitERK3RefIK8ArrayXXfERK3RefIK7ArrayXfE">Brush::Program::fit (C++ function)</a>, <a href="cpp_api/program.html#_CPPv4N5Brush7Program3fitERK7Dataset">[1]</a>
 </li>
@@ -623,21 +629,23 @@ document.write(`
 </li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program11get_weightsEv">Brush::Program::get_weights (C++ function)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program12grad_descentERK7ArrayXfRK7Dataset">Brush::Program::grad_descent (C++ function)</a>
-</li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program10is_fitted_E">Brush::Program::is_fitted_ (C++ member)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program9linearizeEv">Brush::Program::linearize (C++ function)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4NK5Brush7Program6mutateEv">Brush::Program::mutate (C++ function)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program7predictE11enable_if_tI9is_same_vI1R7ArrayXbE1RERK7Dataset">Brush::Program::predict (C++ function)</a>, <a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program7predictE11enable_if_tI9is_same_vI1R7ArrayXiE1RERK7Dataset">[1]</a>, <a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program7predictE11enable_if_tI9is_same_vI1R8TreeTypeE1RERK7Dataset">[2]</a>, <a href="cpp_api/program.html#_CPPv4N5Brush7Program7predictERK3RefIK8ArrayXXfE">[3]</a>
+      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program3outE">Brush::Program::out (C++ member)</a>
 </li>
-      <li><a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program13predict_probaE11enable_if_tI9is_same_vI1R7ArrayXbE7ArrayXfERK3RefIK8ArrayXXfE">Brush::Program::predict_proba (C++ function)</a>, <a href="cpp_api/program.html#_CPPv4I0EN5Brush7Program13predict_probaE11enable_if_tI9is_same_vI1R7ArrayXbE7ArrayXfERK7Dataset">[1]</a>
+      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program7predictERK3RefIK8ArrayXXfE">Brush::Program::predict (C++ function)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4I00EN5Brush7Program20predict_with_weightsE1RRK7DatasetPPK1W">Brush::Program::predict_with_weights (C++ function)</a>, <a href="cpp_api/program.html#_CPPv4N5Brush7Program20predict_with_weightsERK7DatasetRK7ArrayXf">[1]</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program7ProgramEKNSt17reference_wrapperI11SearchSpaceEEK4treeI4NodeE">Brush::Program::Program (C++ function)</a>, <a href="cpp_api/program.html#_CPPv4N5Brush7Program7ProgramEv">[1]</a>
+</li>
+      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program12program_typeE">Brush::Program::program_type (C++ member)</a>
+</li>
+      <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program7RetTypeE">Brush::Program::RetType (C++ type)</a>
 </li>
       <li><a href="cpp_api/program.html#_CPPv4N5Brush7Program16set_search_spaceEKNSt17reference_wrapperI11SearchSpaceEE">Brush::Program::set_search_space (C++ function)</a>
 </li>
@@ -677,7 +685,7 @@ document.write(`
 </li>
       <li><a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace26make_multiclass_classifierEii">Brush::SearchSpace::make_multiclass_classifier (C++ function)</a>
 </li>
-      <li><a href="cpp_api/search_space.html#_CPPv4I0EN5Brush11SearchSpace12make_programE2PTii">Brush::SearchSpace::make_program (C++ function)</a>
+      <li><a href="cpp_api/search_space.html#_CPPv4I0EN5Brush11SearchSpace12make_programE1Pii">Brush::SearchSpace::make_program (C++ function)</a>, <a href="cpp_api/search_space.html#_CPPv4I0EN5Brush11SearchSpace12make_programE2PTii">[1]</a>
 </li>
       <li><a href="cpp_api/search_space.html#_CPPv4N5Brush11SearchSpace14make_regressorEii">Brush::SearchSpace::make_regressor (C++ function)</a>
 </li>
